@@ -15,6 +15,8 @@ Release:    RGFW 1.7.5-dev
 - try to fix black flashing issue, zero out XSetWindowAttributes object 
 - fix msvc warnings (wchar, explicitly request an "A" function)
 - add RGFW_window_mouseHeld
+- add RGFW_MEMSET
+- if `RGFW_EXPORT` or `RGFW_IMPORT` is defined, default to a blank RGFWDEF if RGFWDEF is not set
 
 Release:    RGFW 1.7 (May 6, 2025)
 -----------------------------------------------
